# GenericDictionaryCpp

./: .gitignore  CMakeLists.txt  GenericDictionary.h  README.md
PerformanceTestGenerator/: CMakeLists.txt  PerformanceTestGenerator.cpp  main.cpp
src/PerformanceTestGenerator/: CMakeLists.txt  PerformanceTestGenerator.cpp  PerformanceTestGenerator.h  main.cpp
src/include/: GD_Testing.h  GenericDictionary.h
src/tests/: CMakeLists.txt  ColumnDictionary.cpp  ColumnDictionary.h  FunctionalityTests.cpp  FunctionalityTests.h  TableDictionary.cpp  TableDictionary.h  TestColumnDictionary.cpp  TestColumnDictionary.h  TestDictionary.cpp  TestGenericDictionary.cpp  TestGenericDictionary.h  TestTableDictionary.cpp  TestTableDictionary.h  arrayMultiNameMultiID.cpp  commonFunctionalityTest.h  diffTests.txt  exampleCode.cpp  performanceTest.cpp  testtest.cpp
src/tests/PerformanceTestGenerator/: CMakeLists.txt  PerformanceTestGenerator.cpp  TestParameters.cpp  TestParameters.h  main.cpp
src/tests/PerformanceTestStandAlone/: CMakeLists.txt  FunctionalityTests.cpp  FunctionalityTests.h  TestGenericDictionary.cpp  TestGenericDictionary.h  testtest.cpp
unitTests/: CMakeLists.txt  GD_Testing.h  README.md  UtilityTimer.h  commonFunctTest.cpp  commonFunctTest.h  ntp_arrayDupID.cpp  ntp_arrayDupName.cpp  ntp_arrayDupNameDupID.cpp  ntp_arrayLookupFail.cpp  ntp_initListDupID.cpp  ntp_initListDupName.cpp  ntp_initListDupNameDupID.cpp  ntp_initListLookupFail.cpp  ntp_vectorDupID.cpp  ntp_vectorDupName.cpp  ntp_vectorDupNameDupID.cpp  ntp_vectorLookupFail.cpp  ptp_array.cpp  ptp_initList.cpp  ptp_performanceTest.cpp  ptp_vector.cpp
